--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=18.18.0",
+    "npm": ">=9"
   }
 }
